# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci-configuration.yml
build_shared/: CMakeCache.txt  Makefile  cmake_install.cmake
